tests/golden/defaults/vcluster/vcluster/10_helmchart/vcluster/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vcluster
    chart: vcluster-0.19.6
    heritage: Helm
    release: vcluster
  name: vcluster
  namespace: syn-vcluster
spec:
  ports:
    - name: https
      nodePort: null
      port: 443
      protocol: TCP
      targetPort: 8443
    - name: kubelet
      nodePort: null
      port: 10250
      protocol: TCP
      targetPort: 8443
  selector:
    app: vcluster
    release: vcluster
  type: ClusterIP
