tests/golden/defaults/vcluster/vcluster/10_helmchart/vcluster/templates/statefulset-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vcluster
    chart: vcluster-0.19.6
    heritage: Helm
    release: vcluster
  name: vcluster-headless
  namespace: syn-vcluster
spec:
  clusterIP: None
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
  publishNotReadyAddresses: true
  selector:
    app: vcluster
    release: vcluster
